# Arduino-Sentence-Generator

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
arduino/: arduino.ino  personal_grammar_config.hpp  personal_info_config.hpp  pushbutton.hpp  sentence_printer.hpp
arduino/lib/: grammar.hpp  monospace_sizer.hpp  sentence_generator.hpp  utility_cpp.hpp
arduino/lib/macros/: macro.hpp  no_space_begin.hpp  no_space_end.hpp  remove_empty.hpp
demo/: CMakeLists.txt  demo.cpp
lib/: CMakeLists.txt  monospace_sizer.hpp  sentence_generator.hpp  sizer.hpp  utility_cpp.hpp
qt_app/: .gitignore  AndroidManifest.xml  QTApp.pro  main.cpp  mainwindow.cpp  mainwindow.h  personal_info_config.h  qlabel_sizer.hpp  sentence_generator_widget.cpp  sentence_generator_widget.hpp
qt_app/android/: AndroidManifest.xml
test/: CMakeLists.txt  main.hpp  main_test.cpp
webassembly/: compile.sh  main.cpp
